workloads/nginx-demo/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
  annotations:
    fluxcd.io/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx
  strategy: {}
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - name: nginx-port
          containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-content
        resources:
          limits:
            memory: 512M
            cpu: 100m
          requests:
            memory: 512M
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /
            port: nginx-port
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: nginx-port
          periodSeconds: 5
      volumes:
      - name: web-content
        emptyDir: {}
---
